config/instances/manuela-prod/messaging/messaging-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: manuela-prod-messaging
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
