config/instances/manuela-prod/messaging/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: messaging
spec:
  host: messaging-manuela-prod-messaging.apps.ocp3.stormshift.coe.muc.redhat.com
